--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html {
+    scroll-behavior: smooth;
+}
 h1 {
     font-family: linotype-didot, serif; 
 }
@@ -46,27 +49,50 @@ body {
     padding: 80px 0 0 0;
 }
 .popular-products{
-    margin: 120px 0;
+    margin: 100px 0;
 }
-.popular-products .row .col .card-group .card { 
-    margin: 0 3px;
-    background-color: #FBF7F2;
-    border-radius: 4px;
-}
-.popular-products .row .col .card-group .card .card-footer {
-    background-color: darkblue;
-}
-.popular-products .row .col .card-group .card .card-footer a {
-    text-decoration: none;
-    color: whitesmoke;
-}
-.popular-products .row .col .card-group .card .card-footer .row h6 {
-    display: flex;
+.popular-products .popular-products-title {
     align-content: center;
     justify-content: center;
+    margin: 0 0 50px 0;
 }
-.popular-products .row .col .card-group .card .card-footer .row .text-muted img {
-    width: 40px;
+.popular-products .popular-products-title h1 {
+    font-size: 40px;
+}
+.popular-products .popular-products-title a {
+    display: flex;
+    align-content: center;
+}
+.popular-products .popular-products-title .scrolly-popular-products img {
+    width: 25px;
+    margin: 0 15px 8px 15px;
+}
+.popular-products .row .col .card-group .card { 
+    margin: 0 8px;
+    background-color: #e2e2e275;
+    border-radius: 4px;
+    border: none;
+}
+.popular-products .row .col .card-group .card .card-footer {
+    background-color: #092538;
+    border-radius: 0 0 5px 5px;
+}
+.popular-products .row .col .card-group .card .card-footer .row {
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.popular-products .row .col .card-group .card .card-footer .row h6 {
+    color: whitesmoke;
+    margin: 0;
+    margin-left: 5px;
+}
+.popular-products .row .col .card-group .card .card-footer .row img {
+    width: 25px;
+    margin-right: 5px;
 }
 .historia {
     display: flex;
