--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 html {
     scroll-behavior: smooth;
 }
-h1 {
-    font-family: linotype-didot, serif; 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'linotype-didot', serif; 
 }
 p {
-    font-family: linotype-didot, serif;
+    font-family: 'futura-pt', sans-serif;
 }
 * {
     margin: 0;
@@ -51,7 +51,7 @@ body {
     padding: 80px 0 0 0;
 }
 .popular-products{
-    margin: 100px 0;
+    margin: 100px 0 0 0;
 }
 .popular-products .popular-products-title {
     align-content: center;
@@ -82,7 +82,8 @@ body {
     transform: translate(0, -10px);
 }
 .popular-products .row .col .card-group .card .card-footer {
-    background-color: #092538;
+    background-color:  #C6A05F;
+    border: none;
     border-radius: 0 0 5px 5px;
 }
 .popular-products .row .col .card-group .card .card-footer .row {
@@ -102,6 +103,37 @@ body {
     width: 25px;
     margin-right: 5px;
 }
+.popular-products .shop-action {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 50px 50px 0 50px;
+}
+.popular-products .shop-action button {
+    padding: 10px 25px;
+    height: 60px;
+    width: 300px;
+    border-radius: 30px;
+    background-color: #092538;
+    border: none;
+    color: whitesmoke;
+    transition: .8s;
+}
+.popular-products .shop-action button:hover {
+    background-color: #0925383b;
+    color: white;
+}
+.popular-products .shop-action .shop-action-button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.popular-products .shop-action .shop-action-button h6 {
+    margin: 0;
+    text-transform: uppercase;
+}
 .historia {
     display: flex;
     flex-direction: row;
@@ -120,6 +152,9 @@ body {
     background-color: #e2e2e275;
     padding: 25px 60px;
     border-radius: 4px;
+}
+.historia .historia-text h1 {
+    font-size: 2rem;
 }
 .historia .historia-img{
     margin-right: 10%;
@@ -176,7 +211,7 @@ body {
     transform: translate(0, -10px);
 }
 .new-products .row .col .card-group .card .card-footer {
-    background-color: #092538;
+    background-color:  #C6A05F;
     border-radius: 0 0 5px 5px;
 }
 .new-products .row .col .card-group .card .card-footer .row {
